--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "todo-app",
   "version": "0.1.0",
+  "homepage": "https://ArturoMauricioDev.github.io/todo-app-react-render",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -40,7 +41,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
-  },
-  "homepage": "https://ElTureque.github.io/todo-app"
+    "gh-pages": "^4.0.0"
+  }
 }
